sample/retrieveUnpackaged/objects/Event_Type_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This custom object describes the settings for each event type including the colours and images to be displayed on the mapping page</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Colour__c</fullName>
        <defaultValue>&quot;BBBBBB&quot;</defaultValue>
        <description>RGB code for the Event colour</description>
        <label>Event Colour</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Body_Text__c</fullName>
        <label>Help Body Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Link_Text__c</fullName>
        <label>Help Link Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Link_URL__c</fullName>
        <label>Help Link URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Static_Resource_Name_Large__c</fullName>
        <label>Icon Static Resource Name Large</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Static_Resource_Name__c</fullName>
        <description>The name of the icon static resource for the event</description>
        <label>Icon Static Resource Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Name__c</fullName>
        <label>Public Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved_Icon_Static_Resource_Large__c</fullName>
        <label>Resolved Icon Static Resource Large</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved_Icon_Static_Resource__c</fullName>
        <description>The link to the resolved icon</description>
        <label>Resolved Icon Static Resource</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Number__c</fullName>
        <description>The number to sort the list by</description>
        <label>Sort Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Event Type Settings</label>
</CustomObject>